Agregue un titulo en banner

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <section container class="mt-5 pt-1">
 
      <p>NOSE QUE PONER WE</p>
+     <h1 class="text-center">Aqui ira el carrusel de eventos proximos</h1>
 
     </section>
 
